--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,11 @@ ul {
 
 .link-nav:focus{
     color:#404bbf ;
-}e
+}
+
+.address{
+    font-style: normal;
+}
    
 .address-text{
     font-size: 16px;
@@ -52,9 +56,7 @@ ul {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.address-1{
-    font-style: normal;
-}
+.address-1{}
 
 .address-text:hover,
 .address-text:focus{
